# ssb-validate2-rsjs

./: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  index.html  index.js  install.sh  karma.conf.js  package-lock.json  package.json  postinstall.sh  test.js  testAppend.js  testValidateBatch.js  wasmLoader.js
.github/workflows/: main.yml
lib/: index.js
native/: Cargo.toml  README.md  index.js
native/src/: lib.rs  utils.rs
native/test/: multiAuthorPerf.js  multiAuthorTest.js  perf.js  test.js
src/: lib.rs
test/: multiAuthorPerf.js  multiAuthorTest.js  perf.js  smoketest.js  test.js
web/: .npmignore  Cargo.toml  README.md  index.html  index.js  main.js  wasmLoader.js
web/test/: multiAuthorTest.js  test.js
