[package]
name = "ssb-validate2-rsjs"
version = "0.1.0"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "4.0" }
#ssb-validate = "1.0.1"
ssb-validate = { path = "/home/glyph/Projects/ngi/ssb-validate-rs", version = "1.0.1" }
ssb-verify-signatures = "1.0.0"

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
