[package]
name = "ssb-validate-neon"
version = "0.1.0"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ssb_validate_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8.0"
