[package]
name = "ssb-validate2-neon"
version = "0.1.0"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
license = "LGPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ssb_validate2_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
arrayvec = "0.5.1"
neon = "0.8"
ssb-validate = "1.0.1"
ssb-verify-signatures = "1.0.0"
